--- a/style.css
+++ b/style.css
@@ -2,4 +2,32 @@ body {
   width: 100%;
   height: 100%;
   margin: 0;
+  text-align: center;
+}
+header{
+  text-align: centers;
+}
+nav a{
+  padding-left: 10px;
+  padding-right: 10px;
+  padding: 0 10px 0 10px;
+  background: grey;
+}
+#featured-property{
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+#featured-properties{
+  padding: 20px;
+  text-align: center;
+  width: 800px;
+  margin: 0 auto;
+}
+#details div{
+  float: left;
+  background-color: red;
+  text-align: center;
+  width: 25%;
 }
